feat: add web frontend v2
